--- a/estiloCalculadora.css
+++ b/estiloCalculadora.css
@@ -24,7 +24,13 @@ body {
     border-radius: 32px;
     box-shadow: 130px 100px 30px 55px #00000033;
 }
-
+.pantalla{
+    font-size: 50px;
+}
+#pantalla{
+    margin: 0;
+    font-size: 50px;
+}
 button {
     cursor: pointer;
     margin: 5px;
